// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopoverTitle is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopoverTitle testClass1 testClass2 emotion-euiPopoverTitle-l"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPopoverTitle props paddingSize l is rendered 1`] = `
<div
  class="euiPopoverTitle emotion-euiPopoverTitle-l"
/>
`;

exports[`EuiPopoverTitle props paddingSize m is rendered 1`] = `
<div
  class="euiPopoverTitle emotion-euiPopoverTitle-m"
/>
`;

exports[`EuiPopoverTitle props paddingSize none is rendered 1`] = `
<div
  class="euiPopoverTitle emotion-euiPopoverTitle"
/>
`;

exports[`EuiPopoverTitle props paddingSize s is rendered 1`] = `
<div
  class="euiPopoverTitle emotion-euiPopoverTitle-s"
/>
`;

exports[`EuiPopoverTitle props paddingSize xl is rendered 1`] = `
<div
  class="euiPopoverTitle emotion-euiPopoverTitle-xl"
/>
`;

exports[`EuiPopoverTitle props paddingSize xs is rendered 1`] = `
<div
  class="euiPopoverTitle emotion-euiPopoverTitle-xs"
/>
`;
